2009-08-27  Mike Krüger  <mkrueger@novell.com>

	* Gui/ResolveVisitor.cs:
	* Parser/CSharpFormatter.cs:
	* Gui/NRefactoryResolver.cs:
	* Parser/NRefactoryParser.cs:
	* Syntax/CSharpSyntaxMode.cs:
	* Parser/FindMemberAstVisitor.cs:
	* Gui/NewCSharpExpressionFinder.cs:
	* Syntax/HighlightPropertiesSemanticRule.cs:
	* Gui/NRefactoryIndexerParameterDataProvider.cs: Fixed unit
	  test failures & compiler warnings.

2009-08-26  Lluis Sanchez Gual  <lluis@novell.com>

	* gtk-gui/gui.stetic: Update gtk# dependency.

2009-08-26  Lluis Sanchez Gual  <lluis@novell.com>

	* CSharpBinding.csproj: Updated dependencies. We now depend on
	  gtk# 2.12.8, Mono 2.4, and Mono.Addins 0.4.

2009-08-26  Mike Krüger  <mkrueger@novell.com>

	* Gui/CSharpTextEditorIndentation.cs: Fixed removing of
	  selection for insert/remove indent commands.

2009-08-26  Mike Krüger  <mkrueger@novell.com>

	* Parser/FindMemberAstVisitor.cs: Optimized find all
	  references operation.

2009-08-26  Lluis Sanchez Gual  <lluis@novell.com>

	* CSharpBindingCompilerManager.cs: Fixed regex for parsing
	  errors. The line+column group is optional in csc.

2009-08-25  Mike Krüger  <mkrueger@novell.com>

	* Parser/CSharpFormatter.cs: Fixed "Bug 533986 - Autoformat:
	  issue when pressing enter at the end of a line".

2009-08-25  Mike Krüger  <mkrueger@novell.com>

	* Gui/CSharpTextEditorIndentation.cs: Use GetContent instead
	  of casting.

2009-08-25  Mike Krüger  <mkrueger@novell.com>

	* Gui/CSharpTextEditorIndentation.cs: fixed possible null
	  reference exception.

2009-08-25  Mike Krüger  <mkrueger@novell.com>

	* Gui/CSharpTextEditorIndentation.cs: Fixed "Bug 533683 - File
	  header automatically expanded".

2009-08-25  Mike Krüger  <mkrueger@novell.com>

	* Gui/NRefactoryParameterDataProvider.cs:
	* Gui/NRefactoryIndexerParameterDataProvider.cs: Indexer xml
	  docs are now displayed.

2009-08-25  Mike Krüger  <mkrueger@novell.com>

	* Gui/NRefactoryIndexerParameterDataProvider.cs: