@@ -1,5 +1,9 @@
 2009-08-27  Mike Krüger  <mkrueger@novell.com>
 
+	* Gui/CSharpAmbience.cs: Improved attribute output.
+
+2009-08-27  Mike Krüger  <mkrueger@novell.com>
+
 	* Gui/ResolveVisitor.cs:
 	* Parser/CSharpFormatter.cs:
 	* Gui/NRefactoryResolver.cs:
